2004-08-24  Philippe Gerum  <rpm@xenomai.org>

	* arch/ppc/hal/switch.S (rthal_context_switch): Enforce standard
	stack frame overhead.

	* include/nucleus/asm-i386/system.h (xnarch_sleep_on): Properly
	set the task state before sleeping on schedule_timeout().

	* include/nucleus/asm-ppc/system.h (xnarch_program_timer_shot): Do
	not rescale the delay value uselessly.

	* arch/ppc/hal/hal.c (__rthal_init): Fix tunables.timer_freq.

	* arch/i386/hal/hal.c: Make proper use of
	IPIPE_NR_XIRQS/IPIPE_NR_IRQS.

2004-08-23  Philippe Gerum  <rpm@xenomai.org>

	* arch/ppc/hal/hal.c (rthal_request_timer, rthal_release_timer):
	Implement timer setup code.

	* testsuite/cruncher/cruncher.c: Remove useless and offending
	<asm/io.h> inclusion (x86-specific).

2004-08-22  Philippe Gerum  <rpm@xenomai.org>

	* arch/ppc: Various compilation fixes.
	
	* Kconfig: Centralize generic/common Kconfig information.

	* arch/ppc/hal/fpu.S: Add FPU save/restore support.

2004-08-19  Philippe Gerum  <rpm@xenomai.org>

	* arch/ppc, include/nucleus/asm-ppc: Add PowerPC base.

	* include/nucleus/asm-i386/system.h: MODULE_LICENSE is always
	defined in 2.6: remove default definition.

2004-08-17  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-i386/hal.h: Kill obsolete
	rthal_switch_to_*() routines: system.h does this in an integrated
	fashion already.

	* include/nucleus/asm-i386/fpu.h: Kill fpu.h and integrate the
	tiny useful bit it used to provide directly into system.h.

2004-08-16  Philippe Gerum  <rpm@xenomai.org>

	* configure.in: Allow for assembly files in target modules.

2004-08-05  Marc Kleine-Budde <kleine-budde@gmx.de>

	* arch/i386/hal/hal.c (rthal_trap_fault): Remove legacy code from
	pre-Adeos times.

2004-08-05  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-uvm/system.h: Include missing
	<rtai_config.h>.

2004-08-05  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* nucleus/pod.c (xnpod_welcome_thread): Fix FPU ownership on
	thread entry.
