@@ -24,68 +24,97 @@
 #include <asm/ppc_asm.h>
 #include <rtai_config.h> 
 
-#define RTHAL_GPSAVE(n, base)	stw n,4*(n)(base)
-#define RTHAL_GPSAVE2(n, base)	RTHAL_GPSAVE(n, base); RTHAL_GPSAVE(n+1, base)
-#define RTHAL_GPSAVE4(n, base)	RTHAL_GPSAVE2(n, base); RTHAL_GPSAVE2(n+2, base)
-#define RTHAL_GPSAVE8(n, base)	RTHAL_GPSAVE4(n, base); RTHAL_GPSAVE4(n+4, base)
-#define RTHAL_GPSAVE10(n, base)	RTHAL_GPSAVE8(n, base); RTHAL_GPSAVE2(n+8, base)
+#define RTHAL_SAVEREG(reg, pos)	stw reg,STACK_FRAME_OVERHEAD+4*(pos)(r1)
+#define RTHAL_LOADREG(reg, pos)	lwz reg,STACK_FRAME_OVERHEAD+4*(pos)(r1)
 
-#define RTHAL_GPLOAD(n, base)	lwz n,4*(n)(base)
-#define RTHAL_GPLOAD2(n, base)	RTHAL_GPLOAD(n, base); RTHAL_GPLOAD(n+1, base)
-#define RTHAL_GPLOAD4(n, base)	RTHAL_GPLOAD(n, base); RTHAL_GPLOAD2(n+2, base)
-#define RTHAL_GPLOAD8(n, base)	RTHAL_GPLOAD(n, base); RTHAL_GPLOAD4(n+4, base)
-#define RTHAL_GPLOAD10(n, base)	RTHAL_GPLOAD(n, base); RTHAL_GPLOAD2(n+8, base)
-
-#define RTHAL_GPSAVEALL(base)	RTHAL_GPSAVE(0, base); RTHAL_GPSAVE2(2, base); \
-				RTHAL_GPSAVE(13, base); RTHAL_GPSAVE8(14, base); \
-				RTHAL_GPSAVE10(22, base)
-#define RTHAL_GPLOADALL(base)	RTHAL_GPLOAD(0, base); RTHAL_GPLOAD2(2, base); \
-				RTHAL_GPLOAD(13, base); RTHAL_GPLOAD8(14, base); \
-				RTHAL_GPLOAD10(22, base)
 /*
  * r3=out_kspp, r4=in_kspp
  */
 _GLOBAL(rthal_switch_context)
 
-	stwu	r1,-108(r1)
+        stwu    r1,-124(r1)
 
-	/* Save general purpose registers. */
-	RTHAL_GPSAVEALL(r1)
+        /* Save general purpose registers. */
 
-	/* Save special registers. */
-	mfctr	 r2
-	stw	 r2,22*4(r1)
-	mfcr	 r2
-	stw	 r2,23*4(r1)
-	mfxer	 r2
-	stw	 r2,24*4(r1)
-	mflr	 r2
-	stw	 r2,25*4(r1)
-	mfmsr	 r2
-	stw	 r2,26*4(r1)
+	RTHAL_SAVEREG(r31,0)
+	RTHAL_SAVEREG(r30,1)
+	RTHAL_SAVEREG(r29,2)
+	RTHAL_SAVEREG(r28,3)
+	RTHAL_SAVEREG(r27,4)
+	RTHAL_SAVEREG(r26,5)
+	RTHAL_SAVEREG(r25,6)
+	RTHAL_SAVEREG(r24,7)
+	RTHAL_SAVEREG(r23,8)
+	RTHAL_SAVEREG(r22,9)
+	RTHAL_SAVEREG(r21,10)
+	RTHAL_SAVEREG(r20,11)
+	RTHAL_SAVEREG(r19,12)
+	RTHAL_SAVEREG(r18,13)
+	RTHAL_SAVEREG(r17,14)
+	RTHAL_SAVEREG(r16,15)
+	RTHAL_SAVEREG(r15,16)
+	RTHAL_SAVEREG(r14,17)
+	RTHAL_SAVEREG(r13,18)
+	RTHAL_SAVEREG(r3,19)
+	RTHAL_SAVEREG(r2,20)
+	RTHAL_SAVEREG(r0,21)
 
-	/* Actual switch block. */
-	stw	 r1,0(r3)	/* *out_kspp = sp */
-#ifdef CONFIG_SMP
-	sync
-#endif /* CONFIG_SMP */
-	lwz	 r1,0(r4)	/* sp = *in_kspp */
+        /* Save special registers. */
+	
+	mfctr    r2
+	RTHAL_SAVEREG(r2,22)
+        mfcr     r2
+	RTHAL_SAVEREG(r2,23)
+        mfxer    r2
+	RTHAL_SAVEREG(r2,24)
+        mflr     r2
+	RTHAL_SAVEREG(r2,25)
+        mfmsr    r2
+	RTHAL_SAVEREG(r2,26)
 
-	/* Restore special registers. */
-	lwz	 r2,26*4(r1)
-	mtmsr	 r2
-	lwz	 r2,25*4(r1)
-	mtlr	 r2
-	lwz	 r2,24*4(r1)
-	mtxer	 r2
-	lwz	 r2,23*4(r1)
-	mtcr	 r2
-	lwz	 r2,22*4(r1)
-	mtctr	 r2
+        /* Switch stacks. */
+	
+        stw      r1,0(r3)       /* *out_kspp = sp */
+        lwz      r1,0(r4)       /* sp = *in_kspp */
+
+        /* Restore special registers. */
+
+	RTHAL_LOADREG(r2,26)
+        mtmsr    r2
+	RTHAL_LOADREG(r2,25)
+        mtlr     r2
+	RTHAL_LOADREG(r2,24)
+        mtxer    r2
+	RTHAL_LOADREG(r2,23)
+        mtcr     r2
+	RTHAL_LOADREG(r2,22)
+        mtctr    r2
 
 	/* Restore general purpose registers. */
-	RTHAL_GPLOADALL(r1)
+	
+	RTHAL_LOADREG(r0,21)
+	RTHAL_LOADREG(r2,20)
+	RTHAL_LOADREG(r3,19)
+	RTHAL_LOADREG(r13,18)
+	RTHAL_LOADREG(r14,17)
+	RTHAL_LOADREG(r15,16)
+	RTHAL_LOADREG(r16,15)
+	RTHAL_LOADREG(r17,14)
+	RTHAL_LOADREG(r18,13)
+	RTHAL_LOADREG(r19,12)
+	RTHAL_LOADREG(r20,11)
+	RTHAL_LOADREG(r21,10)
+	RTHAL_LOADREG(r22,9)
+	RTHAL_LOADREG(r23,8)
+	RTHAL_LOADREG(r24,7)
+	RTHAL_LOADREG(r25,6)
+	RTHAL_LOADREG(r26,5)
+	RTHAL_LOADREG(r27,4)
+	RTHAL_LOADREG(r28,3)
+	RTHAL_LOADREG(r29,2)
+	RTHAL_LOADREG(r30,1)
+	RTHAL_LOADREG(r31,0)
 
-	addi	r1,r1,108
+        addi    r1,r1,124
 
-	blr
+        blr
