@@ -499,7 +499,7 @@ static inline void xnarch_init_thread (xnarchtcb_t *tcb,
     *tcb->stackbase = 0;
     ksp = (unsigned long *)((((unsigned long)tcb->stackbase + tcb->stacksize - 0x10) & ~0xf) - RTHAL_SWITCH_FRAME_SIZE);
     tcb->ksp = (unsigned long)ksp - STACK_FRAME_OVERHEAD;
-    ksp[3] = (unsigned long)tcb; /* r3 */
+    ksp[19] = (unsigned long)tcb; /* r3 */
     ksp[25] = (unsigned long)&xnarch_thread_trampoline; /* lr */
     ksp[26] = flags & ~MSR_EE; /* msr */
 
